tests/error/struct_constr.mml
type s = {s: int; }

let s = {s = 3;} in s.c
